# os_lab_6

src/: CMakeLists.txt  child_node.cpp  main_node.cpp  sf.cpp  sf.h
